[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/run_summary.gd" id="1_summary"]

[node name="RunSummary" type="CanvasLayer"]
script = ExtResource("1_summary")

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -160.0
offset_right = 220.0
offset_bottom = 160.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
custom_minimum_size = Vector2(400, 260)

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBox"]
text = "Run Summary"

[node name="TimeLabel" type="Label" parent="Panel/MarginContainer/VBox"]
text = "Time: 0:00"

[node name="DepthLabel" type="Label" parent="Panel/MarginContainer/VBox"]
text = "Depth: 0"

[node name="ScrapLabel" type="Label" parent="Panel/MarginContainer/VBox"]
text = "Scrap: 0"

[node name="UpgradesLabel" type="Label" parent="Panel/MarginContainer/VBox"]
text = "Upgrades"

[node name="UpgradesContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBox"]

[node name="RestartButton" type="Button" parent="Panel/MarginContainer/VBox"]
text = "Restart Run"

[node name="MetaButton" type="Button" parent="Panel/MarginContainer/VBox"]
text = "Meta Progression"

[node name="MenuButton" type="Button" parent="Panel/MarginContainer/VBox"]
text = "Main Menu"
